# 1.03.07 (72839) Apr 19, 2013
4/19/13 Deploying custom version for Stanford study
Added code that will present the increments on the plank as integer values rather than quarter meters, see #3537.
Added a parameter to the sim sharing message that describes masses on the plank at the beginning of a challenge that indicates whether the mass values are visible.
Added a parameter to the message that is sent when masses are added to the plank that indicates whether the mass value is visible.
Changed the wording of the prompt used for studies.
# 1.03.06 (72767) Apr 12, 2013
4/12/13 Publishing to dev for review with the Stanford research team.
Added additional information to the "challengePresented" sim sharing messages that indicates the state of the plank at the start of the challenge.
# 1.03.05 (72745) Apr 12, 2013
4/12/13 Deploying to dev for review with Stanford research team
Fixed some issues with how parameter sets were being added to sim sharing messages that was causing some of the data to be missing.
# 1.03.04 (72739) Apr 10, 2013
# 1.03.03 (72737) Apr 10, 2013
# 1.03.02 (68940) Oct 7, 2012
10/7/12 #3450, published a dev version of Balancing Act for testing of Armenian preferred fonts in phetcommon-fonts.properties
(1.03.01 is missing due to a build failure, 10/7/12)
9/6/12 #3434, change default behavior of "New Game" to no confirmation
# 1.03.00 (67625) Sep 4, 2012
# 1.02.01 (67551) Aug 30, 2012
Fixed an untranslatable string.  String was "What will happen".
# 1.02.00 (66650) Aug 7, 2012
# 1.01.02 (66627) Aug 7, 2012
> Fixed a problem that prevented audio from playing under Java 7
> Fixed an issue with the clock on the game tab that was causing it to be slow by 1 second per minute.
# 1.01.01 (66291) Jul 26, 2012
7/26/12 Deploying to dev for testing of recent changes.
> Modified width of the text box used for entering mass value guesses.
> Changed the tilt-prediction challenge to allow two attempts instead of one (for greater consistency with other challenges).