@@ -1,3 +1,4 @@
+Added a new sim sharing message that indicates the user's proposed answer to each challenge presented during the game.
 # 1.03.07 (72839) Apr 19, 2013
 4/19/13 Deploying custom version for Stanford study
 Added code that will present the increments on the plank as integer values rather than quarter meters, see #3537.
